--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "type": "git",
         "url": "https://github.com/BlackrockDigital/startbootstrap-grayscale.git"
     },
+    "scripts": {
+        "gulp": "gulp"
+    },
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.3.1",
         "bootstrap": "4.1.3",
